# smart_parking

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  NOTICE.md  README.en.md  README.md  database_optimization_indexes.sql  docker-compose.prod.yml  docker-compose.yml  nginx.conf  redis.conf  smart_parking.sql
Parking_Ai/: .cursorrules  .dockerignore  .env.example  .ruff.toml  CLAUDE.md  Dockerfile.ai  Dockerfile.python  README.md  main.py  main_api.py  pyproject.toml  requirements.txt  框架.txt
Parking_Ai/app/: api.py  config.py  deps.py  metrics.py  schemas.py
Parking_Ai/config/: config.yaml
Parking_Ai/core/: config.py  engine.py  roi_loader.py
Parking_Ai/data/roi/: roi_1_camera_1.json  roi_2_camera_1.json  roi_3_camera_1.json
Parking_Ai/inference/: detector.py  roi_matcher.py  stability.py
Parking_Ai/tests/: test_api.py  test_center_match.py  test_config.py  test_engine.py  test_geometry.py  test_roi_loader.py
Parking_Ai/tools/: generate_structure.py  roi_labeler.py  roi_to_excel.py  slot_to_excel.py
Parking_Ai/utils/: geometry.py
Redis/: README.md  README.zh_CN.md  install_redis_service.bat  redis.conf  sentinel.conf
RuoYi-SpringBoot3-ElementPlus-master/: Dockerfile.nginx  README.md  package-lock.json  package.json  vite.config.js
RuoYi-SpringBoot3-Pro-master/: .cursorrules  .dockerignore  CLAUDE.md  (+5 more)
ai-service/: .cursorrules  .env.example  README.md  main.py  main_api.py  pyproject.toml  requirements.txt  test_main.http  框架.txt
ai-service/app/: api.py  config.py  metrics.py  schemas.py
ai-service/config/: config.yaml
ai-service/core/: engine.py
ai-service/tests/: test_api.py  test_config.py  test_engine.py  test_stability.py
ai-service/tools/: roi_to_excel.py  slot_to_excel.py
ai-service/utils/: __init__.py  draw.py  geometry.py
(+334 files in other folders)
