[project]
name = "parking-ai"
version = "1.0.0"
description = "Parking AI inference service with YOLO model for slot detection"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0",
    "PyYAML>=6.0.2",
    "pydantic>=2.10.0",
    "ultralytics>=8.3.0",
    "torch>=2.5.0",
    "openpyxl>=3.1.5",
    "pytest>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
